src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__assignment__function_calls.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: diagnostics
---
error[E037]: Invalid assignment: cannot assign 'ARRAY[*] OF DINT' to 'ARRAY[0..10] OF DINT'
   ┌─ <internal>:12:17
   │
12 │                 a   := vla;
   │                 ^^^^^^^^^^ Invalid assignment: cannot assign 'ARRAY[*] OF DINT' to 'ARRAY[0..10] OF DINT'

error[E037]: Invalid assignment: cannot assign 'ARRAY[0..10] OF DINT' to 'ARRAY[*] OF DINT'
   ┌─ <internal>:13:17
   │
13 │                 vla := a;
   │                 ^^^^^^^^ Invalid assignment: cannot assign 'ARRAY[0..10] OF DINT' to 'ARRAY[*] OF DINT'
